using c and add argparse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
 project(spms)
 
-file(GLOB SRC src/*.cpp)
+file(GLOB SRC src/*.c)
+
+include_directories(include)
+
+add_subdirectory(deps)
 
 add_executable(spms ${SRC})
-target_link_libraries(spms archive)
+target_link_libraries(spms archive argparse)
