--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(spms)
+project(spms C)
 
 file(GLOB SRC src/*.c)
 
@@ -8,4 +8,4 @@ include_directories(include)
 add_subdirectory(deps)
 
 add_executable(spms ${SRC})
-target_link_libraries(spms archive argparse)
+target_link_libraries(spms archive argparse inih)
